# FINAL_MFR

./: CMakeCache.txt  CMakeLists.txt  GRPC_EXAMPLE  GRPC_EXAMPLE.cbp  Makefile  README  cmake_install.cmake  main.cpp  sendData.grpc.pb.cc  sendData.grpc.pb.h  sendData.pb.cc  sendData.pb.h
Debug/hexdump/: hexdmp.cpp  ΗexDump.cpp  ΗexDump.h
Driver/: Driver.cpp  Driver.h
Recipe/RecipeItem/: RecipeItem.cpp  RecipeItem.h
Recipe/RecipeVector/: RecipeVector.cpp  RecipeVector.h
Server/: CallData.cpp  CallData.h  ClientPacket.cpp  ClientPacket.h  Server.cpp  Server.h  ServerInfo.h
externalFunctions/: mapFunctions.cpp
protos/: sendData.proto
